# monitorUbi

./: .gitignore  README.md  mobility_v1.0.0_openapi.json  monitorUbi.db  pyproject.toml  sqlite.db
monitorUbi/: __main__.py  client.py  db.py  monitorUbi.service  schemas.py  service.py  terminal.py  tui.py  utils.py  view_models.py
monitorUbi/migrations/: 001_init.sql
